Fix header and footer width on mobile & gallery on size under 350 px with a display block

--- a/gallery.css
+++ b/gallery.css
@@ -1,20 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo|Work+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400|Playfair+Display:400,700,400italic|Libre+Baskerville:400,700,400italic|Muli:300,400|Open+Sans:400,300,700|Oswald:400,700|Raleway:400,100,300,700|Montserrat:400,700|Merriweather:400,300,300italic,400italic,700|Bree+Serif|Vollkorn:400italic,400,700|Abril+Fatface|Cardo:400,400italic');
+
 body {
     margin: 0;
     font-family: 'Cardo', Garamond, 'Times New Roman', serif;
 }
 
-
-
-/* *,
-*::before,
-*::after {
-	box-sizing: border-box;
-} */
-
-/*new header*/
-
+/* START HEADER */
+/* TITLE */
 .word {
     color: #fff;
     text-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
@@ -54,14 +47,6 @@ body {
     margin-bottom: 0.825rem;
 }
 
-@media screen and (max-width: 600px) {
-    .header-img {
-        display: none;
-    }
-}
-
-/* nav bar desktop */
-
 .header-nav {
     position: relative;
     display: flex;
@@ -90,14 +75,10 @@ body {
 .nav a:hover {
     color: #faf0e6;
 }
+/* END HEADER */
 
-/*original*/
 
-body {
-    min-height: 100vh;
-    background-color: #fafafa;
-}
-
+/* START GALLERY */
 .container {
     max-width: 100rem;
     margin: 0 auto;
@@ -107,20 +88,20 @@ body {
 .heading {
     font-family: 'Cardo', Garamond, 'Times New Roman', serif;
     font-size: 2rem;
-    font-weight: 500;
-    line-height: 1.5;
-    text-align: center;
-    padding: 3.5rem 0;
-    color: #1a1a1a;
-}
-
-.heading span {
-    display: block;
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
+        font-weight: 500;
+        line-height: 1.5;
+        text-align: center;
+        padding: 3.5rem 0;
+        color: #1a1a1a;
+    }
+    
+    .heading span {
+        display: block;
+    }
+    
+    .gallery {
+        display: flex;
+        flex-wrap: wrap;
     /* Compensate for excess margin on outer gallery flex items */
     margin: -1rem -1rem;
 }
@@ -145,6 +126,7 @@ body {
 .gallery-image:hover {
     transform: scale(1.15);
 }
+/* END GALLERY */
 
 /*  START FOOTER  */
 
@@ -175,6 +157,10 @@ footer a {
     font-size: 20px;
 }
 
+.a-follow {
+    margin: 5px;
+}
+
 .title-footer {
     font-size: 20px;
 }
@@ -186,87 +172,51 @@ a.footer-link {
 a.footer-link:hover {
     color: #faf0e6;
 }
-
-.a-follow {
-    margin: 5px;
-}
-
 /* END FOOTER */
 
-@media screen and (min-width: 601px) {
-    .a-follow:hover {
-        opacity: 0.8;
+@media screen and (max-width: 600px) {
+    body {
+        width: 130%;
     }
-    footer {
-        display: flex;
-        justify-content: space-around;
-    }
-    .footer-link {
-        display: flex;
-        flex-direction: column;
-    }
-    h6.follow {
-        margin-top: 25px;
-        margin-bottom: 10px;
-        margin-left: 10px;
-    }
-    h4.title-footer {
-        margin-top: 23px;
-        margin-bottom: 22px;
-    }
-    h5.title-footer {
-        margin-top: 24px;
-        margin-bottom: 25px;
-    }
-    .a-follow:hover {
-        opacity: 0.8;
-    }
-    footer {
-        display: flex;
-        flex-direction: row;
-    }
-    div.navbar {
+    
+    /* HEADER */
+    .header-img {
         display: none;
     }
-    .header-nav {
-        height: 80px;
-    }
-    footer {
-        height: auto;
-        padding-bottom: 30px;
-        margin-top: 80px;
-    }
-    .logo {
-        width: 70px;
-        height: 70px;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    .bloc {
-        width: 70%;
-    }
-    .header-nav {
+    
+    div.header-nav {
         display: flex;
         justify-content: center;
         align-items: center;
         padding-right: 0;
+        height: 75px;
     }
+    
     img.logo {
         border-radius: 50%;
         width: 70px;
         height: 70px;
     }
+
+    /* GALLERY */
+    .gallery {
+        display: block;
+    }
+
+    /*NAV diseppear on mobile for a navbar bottom for mobile*/
     .nav {
         display: none;
     }
-    /* no side bar on mobile */
-    .sidenav {
-        display: none;
+    
+
+    /* START NAVBAR */
+
+    .logo {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 25px;
     }
-    .footer-desktop {
-        display: none;
-    }
+
     /* Place the navbar at the bottom of the page, and make it stick */
     .navbar {
         display: flex;
@@ -288,7 +238,7 @@ a.footer-link:hover {
     .navbar a {
         float: left;
         display: block;
-        color: #544c44;
+        color: white;
         text-align: center;
         padding: 14px 8px;
         text-decoration: none;
@@ -296,45 +246,97 @@ a.footer-link:hover {
     }
     /* Change the color of links on hover */
     .navbar a:hover {
-        color: white
+        color: rgb(63, 63, 63);
     }
+    
     /* Add a color to the active/current link */
     .navbar a.active {
-        color: white;
+        color: #c2c2c2;
         border-radius: 5px;
         width: 40px;
     }
     /* End NAVBAR */
+    
     /* START FOOTER MEDIA QUERIES*/
+    .footer-desktop {
+        display: none;
+    }
+
+    footer {
+        height: 120px;
+    }
+    
     .div-follow {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 8%;
     }
-    .div-follow {
-        padding-bottom: 20px;
-    }
+
     .img-social {
         width: 40px;
         height: 40px;
         margin: 15px 5px;
     }
-    .div-follow {
-        padding-bottom: 20px;
-    }
+    
     h6.follow {
         display: none;
-    }
-    footer {
-        height: 120px;
     }
     header-nav {
         height: 100px;
     }
-    .logo {
-        width: 50px;
-        height: 50px;
+    /* END FOOTER MEDIA QUERIES*/
+}
+
+
+@media screen and (min-width: 601px) {
+    
+    /* FOOTER */
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        height: auto;
+        padding-bottom: 30px;
+        margin-top: 80px;
+    }
+
+    .a-follow:hover {
+        opacity: 0.8;
+    }
+
+    .footer-link {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    h4.title-footer {
+        margin-top: 23px;
+        margin-bottom: 22px;
+    }
+    
+    h5.title-footer {
+        margin-top: 24px;
         margin-bottom: 25px;
     }
-    /* END FOOTER MEDIA QUERIES*/
+
+    h6.follow {
+        margin-top: 25px;
+        margin-bottom: 10px;
+        margin-left: 10px;
+    }
+
+    /* NAVBAR */
+    div.navbar {
+        display: none;
+    }
+
+    /* HEADER */
+    .header-nav {
+        height: 80px;
+    }
+    .logo {
+        width: 70px;
+        height: 70px;
+    }
 }
